--- a/gs1AI-rtu/style.css
+++ b/gs1AI-rtu/style.css
@@ -12,7 +12,7 @@ body {
 }
 html {
   width: 100%;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: rgb(50, 50, 50);
 }
 body {
   max-width: 720px;
@@ -31,15 +31,17 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .landing-title {
   color: white;
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 28px;
   text-align: center;
-  margin-bottom: 48px;
   padding: 0 24px;
+  position: absolute;
+  width: 100%;
+  bottom: max(60%, calc(50% + 70px));
 }
 
 .play-button {
@@ -55,26 +57,21 @@ body {
   transition: transform 0.2s, box-shadow 0.2s, opacity 0.2s;
   position: relative;
 }
-
 .play-button:hover {
   transform: scale(1.1);
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.3);
 }
-
 .play-button:active {
   transform: scale(0.95);
 }
-
 .play-button.disabled {
   opacity: 0.8;
   cursor: not-allowed;
   pointer-events: none;
 }
-
 .play-button.disabled .play-icon {
   display: none;
 }
-
 .play-button.disabled::before {
   content: "";
   position: absolute;
@@ -85,7 +82,6 @@ body {
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
-
 .play-button.disabled::after {
   content: "Loading";
   position: absolute;
@@ -94,7 +90,6 @@ body {
   font-weight: bold;
   letter-spacing: 0.5px;
 }
-
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -103,7 +98,6 @@ body {
     transform: rotate(360deg);
   }
 }
-
 .play-icon {
   width: 0;
   height: 0;
@@ -113,11 +107,19 @@ body {
   margin-left: 6px;
 }
 
+.landing-page .logo {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .result-page {
   background: rgb(222, 223, 225);
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   padding: 1px;
+  position: relative;
 }
 
 .barcode-text {
@@ -185,6 +187,21 @@ body {
 }
 .back-to-scan:active {
   transform: scale(0.95);
+}
+
+.result-page .powered-by-dynamsoft{
+  height:74px;
+}
+.result-page .powered-by-dynamsoft:after{
+  content: "Powered by Dynamsoft";
+  position: absolute;
+  bottom: 0;
+  height: 74px;
+  font-size: 16px;
+  line-height: 74px;
+  color: rgb(119, 119, 119);
+  width: 100%;
+  text-align: center;
 }
 
 .dm-camera-mn-toast{position:absolute;font-size:max(1.25vmin,16px);line-height:max(3vmin,32px);padding:0 max(0.5vmin,4px);left:50%;bottom:max(12.5vmin,100px);transform:translateX(-50%);color:#fff;border-radius:max(0.5vmin,4px);background:rgba(100,100,100,0.5);}
